--- a/app/assets/stylesheets/global/search.css
+++ b/app/assets/stylesheets/global/search.css
@@ -3,26 +3,32 @@
   position:relative;
   left: 15%;
 	text-align: left;
-	padding-top: 2.2em;
+	padding-top: 2em;
 }
 
 #search input {
-    padding-left:2px;
+  padding-left:2px;
 }
-#search option{
-    background:#EDEFDF;
+#search .search-field input,
+#search .search-field select {
+	width: 130px;
+}
 
+#search option{
+  background:#EDEFDF;
 }
 #search .search-field {
 	float:left;
 	position: relative;
 	left: 0px;
 	top: -14px;
-	max-width: 141px;
+	width: 130px;
 	margin-right: 0.5em;
 }
+#search .search-field .search-field-broad {
+	width: 120px;
+}
 #search .search-field #q_need_eq {
-	width: 141px;
 	padding: 0.25em;
 }
 #search label {
@@ -32,6 +38,13 @@
 	position: relative;
 	left: 3px;
 	color: white;
+  -webkit-text-stroke: 1px rgba(0,0,0,0.4);
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgba(0, 0, 0, 0.199219);
+  -moz-text-stroke: 1px rgba(0,0,0,0.4);
+  -moz-text-stroke-width: 1px;
+  -moz-text-stroke-color: rgba(0, 0, 0, 0.199219);
+
 }
 #advanced_search {
     display:none; /* if javascript is disabled */
@@ -58,23 +71,24 @@
     margin-right:1em;
 }
 #search #searchextended {
-    margin-top:3.5em;
+    margin-top:4em;
     padding:0.5em;
     padding-left:8.5em;
     text-decoration: none;
     padding: 0.5em;
+		display:none;
 }
 #search #searchextended table .label {
     vertical-align: top;
     font-size:1.4em;
     color:white;
-    text-shadow: 0 -1px 1px white;
+		padding:0;
     -webkit-text-stroke: 1px rgba(0,0,0,0.4);
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgba(0, 0, 0, 0.199219);
 }
 #search #searchextended table tr {
-    height:50px;
+    height: 40px;
 }
 #search #searchextended input,
 #search #searchextended select {
