--- a/app/assets/stylesheets/global/lists.css
+++ b/app/assets/stylesheets/global/lists.css
@@ -10,6 +10,8 @@
     border:1px solid #b8c2b3;
     background:#d8e0d0;
     text-align:right;
+    overflow: hidden;
+
 }
 .list-item:hover {
     border:1px solid #A1AA9D;
@@ -56,6 +58,13 @@
     overflow:hidden;
     margin-bottom: 0.4em;
     background: #D6DACA;
+}
+.list-item .title {
+	padding-top: 0.3em;
+	font-size: 100%;
+	height: 40px;
+	line-height: 1.3em;
+	overflow: hidden;
 }
 .list-item .details {
     height:100px;
