--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  
 	<meta http-equiv="imagetoolbar" content="no">
 
-	<link rel="shortcut icon" href="assets/iwyg_favicon.ico">
+	<%= favicon_link_tag "favicon.ico" %>
 	<link rel="apple-touch-icon" href="assets/iwyg_apple-icon.png">
   <%= csrf_meta_tag %>
   
