html safety for item titles

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -6,7 +6,7 @@
 @import url(extensions.css);
 
 body {
-	font-family: 'Signika Negative', sans-serif;
+	font-family: 'Signika Negative', serif;
 }
 
 /* Container */
