--- a/app/views/share/search/_search.html.erb
+++ b/app/views/share/search/_search.html.erb
@@ -22,7 +22,7 @@
         <table>
 					<tr>
 						<td class="label"><%= t("searchradius") %></td>
-      			<td class="row-big"><input id="within" name="within" size="8" type="text" class="ui-corner-all" value="<%= @within %>" /></td>
+      			<td class="row-big"><%= text_field_tag :within, params[:within], :size => 8, :class => "ui-corner-all" %></td>
 					</tr>
           <tr>
             <td class="label"><%= t("resources.available").html_safe %><br /> (<%= t("from") %> - <%= t("till") %>)</td>
