--- a/app/assets/stylesheets/themes/iwyg/jquery-ui-1.8.11.custom.css
+++ b/app/assets/stylesheets/themes/iwyg/jquery-ui-1.8.11.custom.css
@@ -380,6 +380,8 @@
 	float: left;
 	clear: left;
 	width: 100%;
+	text-align: left;
+	font-size: 90%;
 }
 .ui-menu .ui-menu-item a {
 	text-decoration:none;
