--- a/app/views/share/search/_search.html.erb
+++ b/app/views/share/search/_search.html.erb
@@ -1,3 +1,10 @@
+<% content_for :head do %>
+  <script type="text/javascript">
+    $(document).ready(function (){
+    });
+  </script>
+<% end %>
+
 <div id="search">                              
   <div id="searchform">
     <%= search_form_for $search, :url => search_items_path, :html => {:method => :post} do |f| %>
@@ -11,12 +18,12 @@
 			</div>
       <div class="search-field">			
 				<label><%= t("whatexactly") %></label>
-      	<%= f.text_field :title_cont, :size => "15", :class => "search-field-broad"  %>
+      	<%= f.text_field :title_cont, :size => "15", :class => "search-field-broad" %>
 			</div>
       <div class="search-field">			      
 				<label><%= t("where") %></label>
-		    <input id="near" name="near" size="15" type="text" class="ui-corner-all search-field-broad" value="<%= @near %>" />
-      </div>
+				<%= text_field_tag :near, params[:near] || @near, :size => 15, :class =>"ui-corner-all search-field-broad" %>
+			</div>
       <div id="searchextended" class="ui-corner-all">
         <h3 class="bold"></h3>
         <table>
