--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <!--[if IE 7]><%= stylesheet_link_tag 'formtastic_ie7' %><![endif]-->
 	<link href="//fonts.googleapis.com/css?family=Signika+Negative:600,400" rel="stylesheet" type="text/css">
 	<%= stylesheet_link_tag "themes/iwyg/agents/#{users_browser}" if File.exist?("app/assets/stylesheets/themes/iwyg/agents/#{users_browser}.css") %>
-	<%= javascript_include_tag "http://maps.google.com/maps/api/js?sensor=false" %>
+	<%= javascript_include_tag "//maps.google.com/maps/api/js?sensor=false" %>
   <%= javascript_include_tag "application" %>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
