--- a/app/views/locations/_nested_form.html.erb
+++ b/app/views/locations/_nested_form.html.erb
@@ -1,16 +1,15 @@
-<% if @locations_json %>
-	<center><%= render :partial => "share/map", :locals => { :locations => @locations_json } %></center>
-<% end %>
+<center>
+	<div id="map" style="width: 90%;height: 300px;margin: 10px 0 10px 0;-webkit-box-shadow: #AAA 0px 0px 15px;"></div>
+	<br />
+</center>
 <%= f.inputs do %>
-  <%= f.semantic_fields_for :locations do |location_form| %>
+  <% f.semantic_fields_for :locations do |location_form| %>
+    
     <%= location_form.input :address, :required => false, :label => t("formtastic.labels.location.address") %>
-    <!--
     <%= location_form.input :city, :required => false, :label => t("formtastic.labels.location.city") %>
-    <%= location_form.input :zip, :required => false, :input_html => {:class => "short"}, :label => t("formtastic.labels.location.zip") %>
-    <li class="locations_attribute_country string input optional stringish">
-      <label class="label"><%= t ("formtastic.labels.location.country") %></label>
-      <%= location_form.localized_country_select :country, $priority_countries, :include_blank => '' %>
-    </li>
-    -->
+    <%= location_form.input :state, :required => false, :label => t("formtastic.labels.location.state") %>
+    <%= location_form.input :zip, :required => false, :input_html => {:class => "short"}, :label => t("formtastic.labels.location.zip")  %>
+    <%= location_form.input :country, :required => false, :label => t("formtastic.labels.location.country"), :as => :string %>
+
   <% end %>
 <% end %>
