item location fix

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -10,7 +10,7 @@
       showErrorTabs();
 
 			/* ADDRESSPICKER */
-			pickAddressOn('item_locations_attributes_0_address', <%= raw( @json_location ) %>);
+			pickAddressOn('#item_locations_attributes_0_address', <%= raw( @json_location ) %>);
 			$('#locationbutton').click(function() {
 				resizeAndSetCenter();
 			});
