localized text descr for locations; drying out location templates

--- a/app/views/locations/_nested_form_location.html.erb
+++ b/app/views/locations/_nested_form_location.html.erb
@@ -1,11 +1,8 @@
-<center>
-	<div id="map" style="width: 90%;height: 300px;margin: 10px 0 10px 0;-webkit-box-shadow: #AAA 0px 0px 15px;"></div>
-	<br />
-</center>
+<%= render :partial => "locations/map" %>
 <%= f.inputs do %>
   <% f.semantic_fields_for :location do |location_form| %>
     
-    <%= location_form.input :address, :required => false, :label => t("formtastic.labels.location.address") %>
+    <%= location_form.input :address, :required => false, :label => t("formtastic.labels.location.address") + "&nbsp;" + image_tag("icons/icon_map.png") %>
     <%= location_form.input :city, :required => false, :label => t("formtastic.labels.location.city") %>
     <%= location_form.input :state, :required => false, :label => t("formtastic.labels.location.state") %>
     <%= location_form.input :zip, :required => false, :input_html => {:class => "short"}, :label => t("formtastic.labels.location.zip")  %>
