wrong url in message mailer views

--- a/app/views/message_mailer/hasRepliedMessage.de.html.erb
+++ b/app/views/message_mailer/hasRepliedMessage.de.html.erb
@@ -6,5 +6,5 @@
 <%= markdown(@message.body) %>
 </pre>
 <br />
-<a href="<%= message_url(@message) %>">Zur Nachricht</a><br />
-<%= message_url(@message) %>
+<a href="<%= mailbox_url(@message) %>">Zur Nachricht</a><br />
+<%= mailbox_url(@message) %>
