--- a/app/views/message_mailer/hasSendMessage.en.html.erb
+++ b/app/views/message_mailer/hasSendMessage.en.html.erb
@@ -1,10 +1,10 @@
 <%= @sender.login %> has sent following message to you:<br /><br />
 <pre>
 <% if not @message.subject.blank? %>
-<b><%= @message.subject %></b><br /><br />
+<b><%= @message.subject %></b><br />
 <% end %>
 <%= markdown(@message.body) %>
 </pre>
 <br />
-<a href="<%= message_url(@message) %>">See message</a><br />
-<%= message_url(@message) %>
+<a href="<%= mailbox_url(@message) %>">See message</a><br />
+<%= mailbox_url(@message) %>
