--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,7 @@
 		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  })();
 		</script>
+		<%= render :partial => "share/googleanalytics" %>
   <% end %>
 	<% if logged_in? %>
 		<script type="text/javascript">
