--- a/app/views/share/_googleanalytics.html.erb
+++ b/app/views/share/_googleanalytics.html.erb
@@ -1,4 +1,4 @@
-var _gaq = [['_setAccount', <%= GOOGLE_ANALYTICS_ID %>], ['_trackPageview']];
+var _gaq = [['_setAccount', <%= Setting.google_analytics_id %>], ['_trackPageview']];
  (function(d, t) {
   var g = d.createElement(t),
       s = d.getElementsByTagName(t)[0];
