--- a/app/views/group_mailer/participation_request.de.html.erb
+++ b/app/views/group_mailer/participation_request.de.html.erb
@@ -4,4 +4,4 @@ Hallo <%= @receiver.login %>,
 <br />
 <br />
 Du kannst die Anfrage hier akzeptieren:<br />
-<%= accept_grouping_url(@g) %>
+<a href="<%= accept_grouping_url(@g) %>"><%= accept_grouping_url(@g) %></a>
