--- a/app/views/group_mailer/participation_request.en.html.erb
+++ b/app/views/group_mailer/participation_request.en.html.erb
@@ -4,4 +4,4 @@ Hello <%= @receiver.login %>,
 <br />
 <br />
 You can accept the request here:<br />
-<%= accept_grouping_url(@g) %>
+<a href="<%= accept_grouping_url(@g) %>"><%= accept_grouping_url(@g) %></a>
