--- a/app/views/share/_googleanalytics.html.erb
+++ b/app/views/share/_googleanalytics.html.erb
@@ -1,4 +1,5 @@
-var _gaq = [['_setAccount', <%= Setting.google_analytics_id %>], ['_trackPageview']];
+<script type="text/javascript">
+var _gaq = [['_setAccount', '<%= AppSettings.google.analytics_id %>'], ['_trackPageview']];
  (function(d, t) {
   var g = d.createElement(t),
       s = d.getElementsByTagName(t)[0];
@@ -8,4 +9,7 @@ var _gaq = [['_setAccount', <%= Setting.google_analytics_id %>], ['_trackPagevie
   s.parentNode.insertBefore(g, s);
 
 })(document, 'script');
+</script>
+
+		
 
