--- a/app/assets/stylesheets/global/main.css
+++ b/app/assets/stylesheets/global/main.css
@@ -35,6 +35,12 @@ body {
 	margin:0px auto;
 }
 
+#map {
+	width: 90%;
+	height: 300px;
+	margin: 10px 0 10px 0;
+	-webkit-box-shadow: #AAA 0px 0px 15px;
+}
 
 .clearfix {
 	clear:both;
