--- a/app/views/locations/_map.html.erb
+++ b/app/views/locations/_map.html.erb
@@ -1,5 +1,5 @@
 <center>
-	<div id="map" style="width: 90%;height: 300px;margin: 10px 0 10px 0;-webkit-box-shadow: #AAA 0px 0px 15px;"></div>
+	<div id="map"></div>
 	<p class="font-smaller" style="color: #666;">
 	<%= t("formtastic.hints.location.map") %>	
 	</p>
