--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <!--[if IE 6]><%= stylesheet_link_tag 'formtastic_ie6' %><![endif]-->
   <!--[if IE 7]><%= stylesheet_link_tag 'formtastic_ie7' %><![endif]-->
 	<link href="//fonts.googleapis.com/css?family=Signika+Negative:600,400" rel="stylesheet" type="text/css">
-	<%= stylesheet_link_tag "themes/iwyg/agents/#{users_browser}" if File.exist?("app/assets/stylesheets/themes/iwyg/agents/#{users_browser}.css") %>
+	<%= users_browser %>	
 	<%= javascript_include_tag "//maps.google.com/maps/api/js?sensor=false" %>
   <%= javascript_include_tag "application" %>
 
