--- a/app/views/share/_pings.html.erb
+++ b/app/views/share/_pings.html.erb
@@ -1,7 +1,3 @@
-<% if pings.size > 0 %>
-	<p class="font-small"><%= t("ping.interestedcount", :count => pings.size).html_safe %></p>
-<% end %>
-
 <% if logged_in? and @item.owner != current_user %>
 <div class="pingarea font-smaller">
  <% if !current_user.pinged?(@resource) || @resource.multiple?  %>
@@ -13,11 +9,14 @@
 		<%= link_to @ping_submit, login_path %>
   </div>
 <% end %>
-<% if pings.size > 0 and logged_in? %>
+<% if pings.size > 0 %>
+	<p class="font-small"><%# t("ping.interestedcount", :count => pings.size).html_safe %></p>
+<% end %>
+<% if pings.size > 0 %>
   <div class="list">
     <% pings.each do |ping| %>  
-      <% if ping and ping.statusTitle != "closed" and (@item.owner == current_user or ping.owner == current_user) %>
-	      <div class="ping ui-corner-all <%=h ping.statusTitle %>">    
+      <% if ping and ping.is_visible_for?(current_user, logged_in?) %>
+				<div id="#<%= ping.id %>" class="ping ui-corner-all <%=h ping.statusTitle %>">    
           <% if ping.owner? %>
             <%= render :partial => "share/usermicro", :locals => { :user => pingerOf(ping) } %>
           <% else %>
