style visibility settings

--- a/app/assets/stylesheets/extensions.css
+++ b/app/assets/stylesheets/extensions.css
@@ -1,8 +1,7 @@
 /**
- * General style definition.
+ * jQuery plugins or any other style of extensions goes here
  * 
- * @author Christian Grlica
- * @copyright 2011 by Heavenseven, www.heavenseven.net 
+ * 
  */
 
 /* ui-datepicker */
