--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -86,12 +86,11 @@ $(document).ready(function (){
 // toggle for panels
 function togglePanel(button, el) {
 	$('#content').click(function() {
-		console.log($(el).css('display'));
-		if($(el).css('display') == 'none') $(el).hide();
+		if($(el).css('display') == 'block') $(el).hide();
 	});
 	$(button).click(function(event) {
 		event.preventDefault();
-		$(this).parent().find(el).toggle();
+		$(el).toggle();
 	});
 }
 
