--- a/app/views/share/_pings.html.erb
+++ b/app/views/share/_pings.html.erb
@@ -16,8 +16,8 @@
   <div class="list">
     <% pings.each do |ping| %>  
       <% if ping and ping.is_visible_for?(current_user, logged_in?) %>			
-				<div id="<%= ping.id %>" class="ping ui-corner-all <%=h ping.statusTitle %>">    
-					<%= render :partial => "share/settings/visibility", :locals => {:model_type => "Ping", :model_id => ping } %>	
+				<div id="ping-<%= ping.id %>" class="ping ui-corner-all <%=h ping.statusTitle %>">    
+					<%= render :partial => "share/settings/visible_for", :locals => {:model_type => "Ping", :model_id => ping.id, :current => ping.settings.visible_for, :css_id => "ping-#{ping.id}" } if ping.item.owner == current_user %>	
           <% if ping.owner? %>
             <%= render :partial => "share/usermicro", :locals => { :user => pingerOf(ping) } %>
           <% else %>
