--- a/app/views/items/_itemowner.html.erb
+++ b/app/views/items/_itemowner.html.erb
@@ -1,1 +1,1 @@
-<%= link_to image_tag(microThumb(item.itemable), :title => owner(item), :class => "ui-corner-all") + "&nbsp;#{owner(item)}".html_safe, item.itemable if item.itemable %>
+<%= link_to image_tag(microThumb(item.itemable), :title => item.owner.login, :class => "ui-corner-all") + "&nbsp;#{item.owner.login}".html_safe, item.itemable if item.itemable %>
