--- a/app/views/share/_pings.html.erb
+++ b/app/views/share/_pings.html.erb
@@ -17,7 +17,7 @@
     <% pings.each do |ping| %>  
       <% if ping and ping.is_visible_for?(current_user, logged_in?) %>			
 				<div id="ping-<%= ping.id %>" class="ping ui-corner-all <%=h ping.statusTitle %>">    
-					<%= render :partial => "share/settings/visible_for", :locals => {:model_type => "Ping", :model_id => ping.id, :current => ping.settings.visible_for, :css_id => "ping-#{ping.id}" } if ping.item.owner == current_user %>	
+					<%= render :partial => "share/settings/visible_for", :locals => { :owner => ping.owner.login, :settings => AppSettings.ping.visible_for.values, :model_type => "Ping", :model_id => ping.id, :current => ping.settings.visible_for || AppSettings.ping.visible_for.default, :css_id => "ping-#{ping.id}" } if ping.item.owner == current_user %>	
           <% if ping.owner? %>
             <%= render :partial => "share/usermicro", :locals => { :user => pingerOf(ping) } %>
           <% else %>
