--- a/app/views/share/settings/_visible_for.html.erb
+++ b/app/views/share/settings/_visible_for.html.erb
@@ -1,17 +1,17 @@
 <div class="setting-visible_for">
 	<div class="setting-visible_for-icon">
-		<%= image_tag("icons/icon_visibility.png", :alt => "setting visible_for", :title => "setting visible_for") %>	
+		<%= image_tag("icons/icon_visibility.png", :alt => t("settings.visible_for.explanation"), :title => t("settings.visible_for.explanation")) %>	
 		<div class="panel">
 			<div class="setting-arrow">
 				<div class="arrow-up"></div>
 			</div>		
 			<ul class="font-smaller ui-corner-all button">
-				<li class="explanation"><%= t('settings.visible_for') %></li>
-				<% AppSettings.ping.visible_to.each do |setting| %>
+				<li class="explanation"><%= t('settings.visible_for.explanation') %></li>
+				<% settings.each do |setting| %>
 					<% if setting.to_s == current.to_s %>
-						<li class="current"><%= link_to t("settings.visible_to.#{setting}"), self.send("changesetting_#{model_type.downcase}_path", :model_type => model_type, :model_id => model_id.to_i, :setting => "visible_for", :value => setting, :css_id => css_id), :method => :put, :remote => true %></li>
+						<li class="current"><%= link_to t("settings.visible_for.#{setting}", :owner => owner.to_s), self.send("changesetting_#{model_type.downcase}_path", :owner => owner.to_s, :settings => settings, :model_type => model_type, :model_id => model_id.to_i, :setting => "visible_for", :value => setting, :css_id => css_id), :method => :put, :remote => true %></li>
 					<% else %>				
-						<li><%= link_to t("settings.visible_to.#{setting}"), self.send("changesetting_#{model_type.downcase}_path", :model_type => model_type, :model_id => model_id.to_i, :setting => "visible_for", :value => setting, :css_id => css_id), :method => :put, :remote => true %></li>
+						<li><%= link_to t("settings.visible_for.#{setting}", :owner => owner.to_s), self.send("changesetting_#{model_type.downcase}_path", :owner => owner.to_s, :settings => settings, :model_type => model_type, :model_id => model_id.to_i, :setting => "visible_for", :value => setting, :css_id => css_id), :method => :put, :remote => true %></li>
 					<% end %>	
 				<% end %>			
 			</ul>
